Feature: Min-letzte-Gruppe-Größe-Property für KO-Gruppenaufteilung
Verhindert kleine letzte Gruppen (z. B. 35 Teams/max 16 → [16,16,3])
durch Falten in die vorherige Gruppe: Ergebnis [16,19], Cadrage gleicht aus.

Neue Property "Turnierbaum Min. letzte Gruppe" (Default 4, Werte 2–12)
in KoPropertiesSpalte, IKoBracketKonfiguration (Default-Methode),
KoKonfigurationSheet und MaastrichterKonfigurationSheet.
GruppenAufteilungRechner erhält 3-Param-Überladung; Dialoge und
MeldeListeSheets zeigen und speichern den neuen Wert.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>